--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -5,13 +5,17 @@
   "description": "Extension allowing simple extensible one-click sharing of a page from the browser.",
   "version": "0.0",
 
+  "icons": {
+    "48": "icon.png"
+  },
+
   "permissions": [
     "activeTab",
     "storage"
   ],
 
   "browser_action": {
-    "default_icon": "",
-    "default_popup": "popup.html"
+    "default_popup": "popup.html",
+    "default_icon": "icon.png"
   }
 }
