--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -6,7 +6,7 @@
   "version": "0.0",
 
   "icons": {
-    "48": "icon.png"
+    "48": "icons/icon.png"
   },
 
   "permissions": [
@@ -15,7 +15,7 @@
   ],
 
   "browser_action": {
-    "default_popup": "popup.html",
-    "default_icon": "icon.png"
+    "default_popup": "popup/popup.html",
+    "default_icon": "icons/icon.png"
   }
 }
