--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -9,13 +9,23 @@
     "48": "icons/icon.png"
   },
 
-  "permissions": [
-    "activeTab",
-    "storage"
-  ],
+  "background": {
+    "scripts": [
+      "lib/background.js",
+      "lib/constants.js",
+      "lib/shareservice.js"
+    ],
+    "persistent": false
+  },
 
   "browser_action": {
     "default_popup": "popup/popup.html",
     "default_icon": "icons/icon.png"
-  }
+  },
+
+  "permissions": [
+    "activeTab",
+    "alarms",
+    "storage"
+  ]
 }
