Added Facebook and Twitter built-in services.

--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -13,7 +13,9 @@
     "scripts": [
       "lib/background.js",
       "lib/constants.js",
-      "lib/shareservice.js"
+      "lib/shareservice.js",
+      "lib/facebookservice.js",
+      "lib/twitterservice.js"
     ],
     "persistent": false
   },
