--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -14,6 +14,8 @@
       "lib/background.js",
       "lib/constants.js",
       "lib/shareservice.js",
+
+      "lib/emailservice.js",
       "lib/facebookservice.js",
       "lib/twitterservice.js"
     ],
