Added options page.

--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -27,6 +27,8 @@
     "default_icon": "icons/icon.png"
   },
 
+  "options_page": "options/options.html",
+
   "permissions": [
     "activeTab",
     "alarms",
