--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -6,6 +6,7 @@
   "version": "1.0.1",
 
   "icons": {
+    "16": "icons/icon_16.png",
     "48": "icons/icon.png"
   },
 
@@ -32,6 +33,7 @@
   "permissions": [
     "activeTab",
     "alarms",
+    "contextMenus",
     "storage"
   ]
 }
